
2009-04-03 13:37 Ali aliov@xfce.org 
	 * : Fix issue with battery critical level in the settings dialog

2009-04-02 19:05 Ali aliov@xfce.org 
	 * : Patch for the man pages by Robby Workman

2009-04-02 15:36 Ali aliov@xfce.org 
	 * : Added exit option in the context menu+some optimization to function calls in libxfpm common

2009-04-02 14:14 Ali aliov@xfce.org 
	 * : Added on battery DBus signal+Fix brightness settings on battery power

2009-04-02 10:46 Ali aliov@xfce.org 
	 * : Fix a Glade warnings

2009-04-02 10:24 Ali aliov@xfce.org 
	 * : Fix Some bugs reported by Yves Alexis

2009-04-02  8:40 Ali aliov@xfce.org 
	 * : Patch of the man page from Robby Workman

2009-04-01 23:33 Ali aliov@xfce.org 
	 * : Monitor the bus connection for the applications that requests inhibit to power manager or screensaver so we can catch if they crash

2009-04-01 15:54 Ali aliov@xfce.org 
	 * : Inhibit plugin: Monitor org.freedesktop.PowerManagement name

2009-04-01  9:33 Ali aliov@xfce.org 
	 * : Added man pages for the power manager and its settings

2009-04-01  9:33 Ali aliov@xfce.org 
	 * : 

2009-03-31  8:48 Ali aliov@xfce.org 
	 * : Bug:Brightness control wasn't getting disabled even if the user disabled it+fix dpms settings changed signal

2009-03-30 21:21 Ali aliov@xfce.org 
	 * : Added brightness popup+fix in XSyncAlarm error iin idle function+Fix reacration of popup window in the brightness plugin

2009-03-30 14:58 Ali aliov@xfce.org 
	 * : Fix some typos, Thanks to Per Kongstad

2009-03-30 11:20 Ali aliov@xfce.org 
	 * : Initializing gthread and dbus_g_thread+updates on TODO

2009-03-29 19:46 Ali aliov@xfce.org 
	 * : Prepare an alpha version of 0.8.0

2009-03-29 18:09 Ali aliov@xfce.org 
	 * : Inhibit plugin: automatically reconnect when the power manager restarts

2009-03-29 17:28 Ali aliov@xfce.org 
	 * : Disabling lid and sleep buttons if the power manager is in inhibit state

2009-03-29 16:24 Ali aliov@xfce.org 
	 * : Added option to reload panel brightness plugin
