@@ -1,4 +1,7 @@
 
+2009-04-04 11:30 Ali aliov@xfce.org 
+	 * : Fix issue with multiple suspend callback
+
 2009-04-03 13:37 Ali aliov@xfce.org 
 	 * : Fix issue with battery critical level in the settings dialog
 
